<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:gravity="center"
            android:text="Iniciar sesión"
            android:textColor="@color/cardview_light_background"
            android:textSize="26dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_below="@id/textViewTitle"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageViewLogo"
            android:layout_marginTop="24dp">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@android:drawable/ic_dialog_email"
                android:hint="Nombre"
                android:textColor="@color/cardview_light_background" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputName"
            android:layout_marginTop="24dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@android:drawable/ic_dialog_email"
                android:hint="Contraseña"
                android:inputType="textPassword"
                android:textColor="@color/cardview_light_background" />


        </android.support.design.widget.TextInputLayout>

        <Switch
            android:id="@+id/switchRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textInputPassword"
            android:layout_alignRight="@+id/textInputPassword"
            android:layout_below="@+id/textInputPassword"
            android:layout_marginTop="24dp"
            android:text="Recordar campos"
            android:textColor="@color/cardview_light_background" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorAccent"
            android:text="Iniciar sesión"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>


</LinearLayout>

