...
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="0.25"
                android:gravity="center" />

            <Button
                android:id="@+id/buttonViewResults"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:text="Ver resultados" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.005"
                android:background="@color/colorDivider" />
...
