<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/checkQuestionnaire"
        android:title="Revisar" />
    <item
        android:id="@+id/doNotCheckQuestionnaire"
        android:title="No revisar" />
</menu>