<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_courses"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="Mis cuestionarios sin resolver" />

        <item
            android:id="@+id/menu_courses_end"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="Mis cuestionarios resueltos" />
        <item android:title="Ayuda">
            <menu>
                <item
                    android:id="@+id/menu_info_wildcard"
                    android:icon="@android:drawable/ic_dialog_info"
                    android:title="Tipos de comodines" />

                <item
                    android:id="@+id/menu_info_velocity"
                    android:icon="@android:drawable/ic_dialog_info"
                    android:title="Rapidez en la respuesta" />

            </menu>
        </item>


    </group>

    <item android:title="Otras Opciones">
        <menu>
            <item
                android:id="@+id/menu_log_out"
                android:icon="@android:drawable/ic_dialog_dialer"
                android:title="Cerrar sesión" />

            <item
                android:id="@+id/menu_forget_and_log_out"
                android:icon="@android:drawable/ic_dialog_dialer"
                android:title="Olvidar y cerrar sesión" />

        </menu>
    </item>

</menu>