<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.teacher.TeacherActivity">

    <ListView
        android:id="@+id/listViewCourse"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <GridView
        android:id="@+id/gridViewCourse"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"
        android:visibility="invisible" />

</android.support.constraint.ConstraintLayout>
