<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/solveTest"
        android:title="Resolver" />
    <item
        android:id="@+id/noSolveTest"
        android:title="No resolver" />
</menu>